cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
add_compile_options(-std=c++11 )
project(pcl_utils)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (pcl_utils pcl_utils.cpp)
target_link_libraries (pcl_utils ${PCL_LIBRARIES})